# 2023Graduation

./: README.md
devel/: .catkin
devel/include/kukirun_msgs/: Coefficient.h  Obstacle.h  Obstacles.h  PolyFitLane.h  Traffic.h  Trajectory.h  TrajectoryPoint.h  Turn.h  VehiclePose.h
devel/lib/pkgconfig/: carla_msgs.pc  kukirun_msgs.pc  server_receiver.pc  server_sender.pc  teleoperation_diagnostic.pc
devel/lib/python3/dist-packages/kukirun_msgs/msg/: _Coefficient.py  _Obstacle.py  _Obstacles.py  _PolyFitLane.py  _Traffic.py  _Trajectory.py  _TrajectoryPoint.py  _Turn.py  _VehiclePose.py  __init__.py
devel/lib/server_receiver/: server_receiver
devel/lib/server_sender/: server_sender
devel/lib/teleoperation_diagnostic/: teleoperation_diagnostic
devel/share/carla_msgs/cmake/: carla_msgs-msg-extras.cmake  carla_msgs-msg-paths.cmake  carla_msgsConfig.cmake
devel/share/kukirun_msgs/cmake/: kukirun_msgs-msg-paths.cmake  kukirun_msgsConfig.cmake
devel/share/roseus/ros/carla_msgs/: manifest.l
devel/share/roseus/ros/kukirun_msgs/: manifest.l
devel/share/server_receiver/cmake/: server_receiverConfig.cmake
devel/share/server_sender/cmake/: server_senderConfig.cmake
devel/share/teleoperation_diagnostic/cmake/: teleoperation_diagnosticConfig.cmake
src/demo_web/: package.json
src/demo_web/src/pages/: index.js
src/demo_web/src/pages/Main/: main.js
src/kukirun_msgs/: CMakeLists.txt
src/kukirun_msgs/msg/: Coefficient.msg  Obstacle.msg  Obstacles.msg  PolyFitLane.msg  Traffic.msg  Trajectory.msg  TrajectoryPoint.msg  Turn.msg  VehiclePose.msg
src/server/: package.json  server.js
src/server_receiver/: CMakeLists.txt  from_web_time_delay.csv  package.xml
src/server_receiver/include/: server_receiver.hpp
src/server_receiver/launch/: server_receiver.launch
src/server_receiver/src/: server_receiver.cpp
src/server_sender/: CMakeLists.txt
src/server_sender/include/: server_sender.hpp
src/server_sender/launch/: server_sender.launch
src/server_sender/src/: server_sender.cpp
src/teleoperation_diagnostic/: CMakeLists.txt  package.xml
src/teleoperation_diagnostic/include/: teleoperation_diagnostic.hpp
src/teleoperation_diagnostic/launch/: teleoperation_diagnostic.launch
src/teleoperation_diagnostic/src/: teleoperation_diagnostic.cpp
src/web/: .prettierrc  package-lock.json  package.json
src/web/src/: index.js
src/web/src/assets/Images/: index.js
src/web/src/components/: index.js
src/web/src/components/Section1/: index.js  style.module.scss
src/web/src/components/Section2/: index.js  style.module.scss
src/web/src/components/stream/: index.js  style.module.scss
src/web/src/hooks/: index.js  useCalcCrc.js  useSendMessage.js
src/web/src/pages/: index.js
src/web/src/pages/Main/: main.js  style.module.scss
src/web/src/stores/: state.js
(+40 files in other folders)
